# badlands

readme/: Badlands 多模块开发环境初始化步骤.md  INSTALL.md  INSTALL.md:Zone.Identifier  Init_README.md  README_CN.MD  environment.yml  ready  目录结构.md
readme/init/: dev_run.py  environment.yml  environment.yml:Zone.Identifier  environment_yml.md  install_badlands.bat  launch.json  pyproject.toml  pyproject.toml:Zone.Identifier  requirements.txt  requirements.txt:Zone.Identifier
readme/rebulid/: 二次开发前置准备.md
